Update pokemon data analysis (1).ipynb

--- a/pokemon data analysis (1).ipynb
+++ b/pokemon data analysis (1).ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Pokemon game analysis.\n",
     "\n",
-    "- The Dataset is about pokemon games. This Project is about studying and analyzing numerous pokemon from the popular cartoon program Pokemon.   The Dataset contains numerous Pokemon metrics such as:  \n",
+    "- The Dataset is about pokemon games. This Project is about studying and analyzing numerous pokemon from the popular gaming program Pokemon.   The Dataset contains numerous Pokemon metrics such as:  \n",
     "  -Type  \n",
     "  -HP  \n",
     "  -Attack  \n",
